1. added preloaded & overlay - html, css & JS 2. Most liked message data 3. Squashed few bugzz 4. Tweaked some queries

--- a/Themes/default/css/LikePosts.css
+++ b/Themes/default/css/LikePosts.css
@@ -154,3 +154,47 @@
 	position: relative;
 	padding-left: 10px;
 }
+
+
+.like_post_stats {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+}
+
+.like_post_stats_data {
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+
+.like_post_stats_data .individual_data {
+	display: none;
+}
+
+#like_post_stats_overlay {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.5);
+	z-index: 100;
+}
+
+#lp_preloader {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -50px;
+	width: 100px;
+	height: 100px;
+	z-index: 101;
+	background-image: url(../images/preloader.gif);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 100% auto;
+}
